--- a/Incedo_Octavius_Demo_2/Incedo_Octavius_Demo_2/Web.config
+++ b/Incedo_Octavius_Demo_2/Incedo_Octavius_Demo_2/Web.config
@@ -21,9 +21,10 @@
     <add name="Incedo_Octavius_Demo_2_kol_degree_map_table_Context"
       connectionString="Data Source=octadb.mysql.database.azure.com; Initial Catalog=octavius_db; uid=myadmin@octadb; pwd=admin@1234;"
       providerName="System.Data.SqlClient" />
-    <add name="Incedo_Octavius_Demo_2_kol_with_degree_Context"
-		 connectionString="Data Source=octadb.mysql.database.azure.com; Initial Catalog=octavius_db; uid=myadmin@octadb; pwd=admin@1234;"
-        providerName="System.Data.SqlClient" />
+    <add name="Incedo_Octavius_Demo_2_kol_with_degree_Context" connectionString="Data Source=octadb.mysql.database.azure.com; Initial Catalog=octavius_db; uid=myadmin@octadb; pwd=admin@1234;"
+      providerName="System.Data.SqlClient" />
+    <add name="Incedo_Octavius_Demo_2_Rules_BU_Deg_Context"  connectionString="Data Source=octadb.mysql.database.azure.com; Initial Catalog=octavius_db; uid=myadmin@octadb; pwd=admin@1234;"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
